# garda-spring26

./: .gitignore  LEGAL_NOTICE.md  Makefile  README.md  common.py  earnings_call_signals.py  finbert.py  finbert_analysis.csv  finbert_metric_analysis.csv  fredAPI2.py  garda1.toml  motley-fool-data.py  nlp_utils.py  pyproject.toml  requirements.txt  run-colab.ipynb  score.py  scrape_motley_fool_transcripts.py  tickers.txt
configs/: output_schema.yaml  target_assets.yaml
data/: clean_state.db  companies.csv  score_cache.db  transcripts_metadata.csv
data/earnings/ABBVIE (ABBV)/: FY2023.txt
data/earnings/AMAZON (AMZN)/: FY2020.txt  FY2021.txt  FY2024.txt
data/earnings/AT&T (T)/: FY2022.txt  FY2024.txt
data/earnings/CONSTELLATION ENERGY (CEG)/: FY2020.txt  FY2021.txt  FY2022.txt  FY2025.txt
data/earnings/COSTCO (COST)/: FY2021.txt  FY2022.txt  FY2023.txt  FY2025.txt
data/earnings/CRH PLC (CRH)/: FY2021.txt  FY2022.txt  FY2025.txt
data/earnings/DOW CHEMICAL  (DOW)/: FY2020.txt  (+3 more)
data/macro/: fred_macro_long.csv  fred_macro_wide.csv
data/policy/: USAGE_GUIDE.txt  policy_score.py  raw_docs_metadata.csv
gardagroup4/: NEXT_STEPS.md
gardagroup4/group1_macro/: Europe.csv  Japan.csv
old (archive)/group1_macro/: US.csv
src/: build_csv.py  clean.py  common.py  mappings.py  prune_legacy.py  report.py  run_pipeline.py  scrape.py  update_companies.py
src/garda1/: __init__.py  cli.py
src/garda1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config_and_cli.py  test_score_helpers.py  test_scrape_and_clean.py
(+24677 files in other folders)
