[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garda1"
version = "0.1.0"
description = "Earnings call scraping and NLP scoring pipeline for Group 3."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.1",
  "langdetect>=1.0.9",
  "pandas>=2.2.2",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.30",
  "torch>=2.2.2",
  "tqdm>=4.66.4",
  "transformers>=4.41.2",
]

[project.scripts]
garda1-run = "run_pipeline:main"
garda1 = "garda1.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "build_csv",
  "clean",
  "common",
  "mappings",
  "nlp_utils",
  "prune_legacy",
  "report",
  "run_pipeline",
  "score",
  "scrape",
  "update_companies",
]

[tool.setuptools.packages.find]
where = ["src"]
